<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg">

    <LinearLayout
        android:id="@+id/container_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/search_input_text"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/lv_cards"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="1dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/any_card_info_title_text"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/gray_text_color"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/any_card_info_description_text"
            android:textColor="@color/gray_text_color"
            android:textSize="12sp"/>
    </LinearLayout>

</RelativeLayout>