<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/main_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:overScrollMode="never"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/container_selected_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/iv_selected_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@null"/>

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@android:drawable/ic_menu_close_clear_cancel"
                        android:background="@color/colorPrimary"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@null" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/container_choose_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@color/black_text_color"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@null"
                        android:src="@android:drawable/ic_menu_camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_photo_text"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/container_name"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/frame_border_bg">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginStart="14dp"
                            android:layout_marginTop="14dp"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_person" />

                        <EditText
                            android:id="@+id/edt_fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="43dp"
                            android:background="@android:color/transparent"
                            android:focusable="true"
                            android:hint="@string/fullname_hint_text"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/black_text_color"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/container_phone"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/frame_border_bg">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginStart="14dp"
                            android:layout_marginTop="14dp"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_phone" />

                        <EditText
                            android:id="@+id/edt_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="43dp"
                            android:background="@android:color/transparent"
                            android:focusable="true"
                            android:hint="@string/phone_hint_text"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:maxLength="30"
                            android:maxLines="1"
                            android:textColor="@color/black_text_color"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/container_mail"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/frame_border_bg">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginStart="14dp"
                            android:layout_marginTop="14dp"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_mail" />

                        <EditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="43dp"
                            android:background="@android:color/transparent"
                            android:focusable="true"
                            android:hint="@string/email_hint_text"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/black_text_color"
                            android:textSize="14sp" />
                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/container_company"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/frame_border_bg">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_company" />

                <EditText
                    android:id="@+id/edt_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="43dp"
                    android:background="@android:color/transparent"
                    android:focusable="true"
                    android:hint="@string/company_hint_text"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textColor="@color/black_text_color"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_job"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/frame_border_bg">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_job" />

                <EditText
                    android:id="@+id/edt_job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="43dp"
                    android:background="@android:color/transparent"
                    android:focusable="true"
                    android:hint="@string/job_hint_text"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textColor="@color/black_text_color"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <fragment
                    android:id="@+id/map_fragment"
                    android:name="task.omer.businesscard.fragment.MySupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    tools:layout="@layout/dummy_mapview" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_location_search"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/frame_border_bg"
                        android:hint="@string/map_search_adress_hint_text"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingEnd="90dp"
                        android:paddingStart="10dp"
                        android:scrollHorizontally="true" />

                    <ImageView
                        android:id="@+id/iv_map_search"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_alignTop="@+id/iv_current_location"
                        android:layout_marginEnd="5dp"
                        android:layout_toStartOf="@+id/iv_current_location"
                        android:contentDescription="@null"
                        android:src="@android:drawable/ic_search_category_default"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/iv_current_location"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_alignEnd="@+id/edt_location_search"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="17dp"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/icon_compass_map" />

                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_save_person"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/save_person_button_bg"
                android:text="@string/button_save_person_text"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>