<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/main_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:overScrollMode="never"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/frame_border_bg"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_person_photo"
                    android:layout_width="84.3dp"
                    android:layout_height="84.1dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30.8dp"
                    android:background="@null"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/tv_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20.2dp"
                    android:textColor="#004e8c"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="20dp"
                    android:background="#efefef" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="33dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="22dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="13dp"
                        android:drawableStart="@drawable/ic_phone"
                        android:text="@string/phone_hint_text"
                        android:textColor="@color/gray_text_color"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/gray_text_color"
                        android:textSize="14sp"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="20dp"
                    android:background="#efefef" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="33dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="22dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_mail"
                        android:text="@string/email_hint_text"
                        android:textColor="@color/gray_text_color"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/gray_text_color"
                        android:textSize="14sp"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="20dp"
                    android:background="#efefef" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="33dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="22dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_company"
                        android:text="@string/company_hint_text"
                        android:textColor="@color/gray_text_color"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/gray_text_color"
                        android:textSize="14sp"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="20dp"
                    android:background="#efefef" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="21dp"
                    android:layout_marginEnd="33dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="11dp"
                        android:drawableStart="@drawable/ic_job"
                        android:text="@string/job_hint_text"
                        android:textColor="@color/gray_text_color"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_job"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/gray_text_color"
                        android:textSize="14sp"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/frame_border_bg"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/ic_location" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:text="@string/location_hint_text" />

                </LinearLayout>

                <fragment
                    android:id="@+id/map_fragment"
                    android:name="task.omer.businesscard.fragment.MySupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="21dp"
                    android:layout_marginEnd="21dp"
                    android:layout_marginStart="21dp"
                    tools:layout="@layout/dummy_mapview" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_delete_person"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/save_person_button_bg"
                android:text="@string/btn_delete_person_text"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>